#21 이미지 영역 밖으로 이동시 불필요한 가로 스크롤 제거

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,8 +4,10 @@
   position: absolute;
   top: 0;
   left: 0;
+  bottom: 0;
   width: 100%;
   z-index: 15000;
+  overflow: hidden;
 
   img {
     all: unset;
