#23 툴바 토글 닫힘모드 크기 최소화

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,8 @@
 /* main.scss */
 
+$toolbar-width: 292px;
+$toolbar-toggle-button-size: 40px;
+
 #publishingContainer {
   position: absolute;
   top: 0;
@@ -24,7 +27,7 @@
 
 #hawkeyeToolbar {
   position: fixed;
-  width: 272px;
+  width: $toolbar-width;
   top: 0;
   // right: 0;
   left: calc(100vw - #{272px + 12px + 12px + 16px});
@@ -38,6 +41,57 @@
   line-height: 1.4;
   overflow: hidden;
   z-index: 20000;
+  
+
+  &:not(.minimized) {
+    .hawkeye-head {
+      cursor: grab;
+    }
+  }
+
+  &.minimized {
+    left: auto !important;
+    top: 0 !important;
+    right: 0 !important;
+    width: $toolbar-toggle-button-size;
+    margin-left: $toolbar-width - $toolbar-toggle-button-size + 12px;
+    background: none;
+    box-shadow: none;
+
+    &:hover {
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      background-color: rgba(240, 240, 240, 0.8);
+    }
+
+    .hawkeye-head {
+      height: 40px;
+      padding: 8px;
+      border: none;
+
+      .hawkeye-title {
+        display: none;
+      }
+    }
+
+    .hawkeye-body,
+    .hawkeye-foot {
+      display: none;
+    }
+  }
+
+  &.collapsed {
+    height: 40px;
+
+    .hawkeye-body {
+      display: none;
+    }
+
+    .hawkeye-foot {
+      .copyright {
+        position: static;
+      }
+    }
+  }
 
   div,
   li,
@@ -47,6 +101,7 @@
 
   a {
     cursor: pointer;
+
     &:hover {
       color: #000;
     }
@@ -61,20 +116,6 @@
   &:not(.uploaded) {
     .upload-after {
       display: none;
-    }
-  }
-
-  &.collapsed {
-    height: 49px;
-
-    .hawkeye-body {
-      display: none;
-    }
-
-    .hawkeye-foot {
-      .copyright {
-        position: static;
-      }
     }
   }
 
@@ -95,14 +136,14 @@
   }
 
   .hawkeye-head {
-    height: 50px;
-    padding: 12px 16px;
+    height: 40px;
+    padding: 4px 8px 4px 16px;
     // border-bottom: 1px solid rgba(255, 255, 255, 0.9);
     border-bottom: 1px solid rgba(#000, 0.1);
-    cursor: grab;
     user-select: none;
 
     display: flex;
+    justify-content: center;
     flex-direction: column;
 
     .title-container {
@@ -122,6 +163,7 @@
     cursor: pointer;
     opacity: 0.7;
     transition: opacity 0.2s;
+    background: none;
 
     &:hover {
       opacity: 1;
@@ -171,7 +213,7 @@
       line-height: 1.2;
       color: #999;
       font-family: Arial, Helvetica, sans-serif;
-  
+
       a {
         color: inherit;
         text-decoration: none;
