#24 이미지 잠금/해제 기능을 마우스 오작동 방지를 위한 잠금 기능으로 변경

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,11 @@
 $toolbar-width: 292px;
 $toolbar-toggle-button-size: 40px;
 
+.hawkeye-locked.moveable-control-box,
+.hawkeye-locked .moveable-control-box {
+  --moveable-color: #999;
+}
+
 #publishingContainer {
   position: absolute;
   top: 0;
@@ -41,7 +46,6 @@ $toolbar-toggle-button-size: 40px;
   line-height: 1.4;
   overflow: hidden;
   z-index: 20000;
-  
 
   &:not(.minimized) {
     .hawkeye-head {
