#28 publishingContainer의 pointer-events 처리로 배경 인터랙션 허용하면서 오버레이 기능 유지

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,9 +16,14 @@ $toolbar-toggle-button-size: 40px;
   width: 100%;
   z-index: 15000;
   overflow: hidden;
+  pointer-events: none;
 
   img {
     all: unset;
+  }
+  
+  * {
+    pointer-events: auto !important;
   }
 }
 
