- UI 개선 - 불필요한 리소스 제거 - 마이너 버그 픽스

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -389,6 +389,7 @@ $toolbar-toggle-button-size: 40px;
 
       button {
         border-radius: 0;
+        cursor: pointer;
 
         +button {
           border-left: 1px solid rgba(255, 255, 255, 0.3);
